--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="map">
-                    <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script> -->
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                 </div>
             </section>
         </main>
