--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
         <header>
             <div class="container">
                 <div class="header-nav">
-                    <img src="#"class="logo"width="150"height="110"alt="Добрый мёд"/>
+                    <img src="img/logo.svg"class="logo"width="150"height="110"alt="Добрый мёд"/>
                     <nav class="main-menu">
                         <ul>
                             <li><a href="#aboutus" class="main-link">О нас</a></li>
-                            <li><a href="#assortment" class="main-link">Продукция</a></li>
+                            <li>
+                                <a href="#assortment" class="main-link">Продукция</a>
+                                <ul class="sub-nav">
+                                    <li><a href="#honey" class="sub-link">Мёд</a></li>
+                                    <li><a href="#honeys-mix" class="sub-link">Медовые композиции</a></li>
+                                    <li><a href="#candle-soap" class="sub-link">Свечи и мыло</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#quality" class="main-link">Качество</a></li>
                             <li><a href="#distributers" class="main-link">Где купить</a></li>
                         </ul>
@@ -26,7 +33,14 @@
                                 <nav class="mobile-menu">
                                     <ul>
                                         <li><a href="#aboutus" class="mobile-link">О нас</a></li>
-                                        <li><a href="#assortment" class="mobile-link">Продукция</a></li>
+                                        <li>
+                                        <a href="#assortment" class="mobile-link">Продукция</a>
+                                            <ul class="sub-nav mobile-sub">
+                                                <li><a href="#honey" class="mobile-link">Мёд</a></li>
+                                                <li><a href="#honeys-mix" class="mobile-link">Медовые композиции</a></li>
+                                                <li><a href="#candle-soap" class="mobile-link">Свечи и мыло</a></li>
+                                            </ul>
+                                        </li>
                                         <li><a href="#quality" class="mobile-link">Качество</a></li>
                                         <li><a href="#distributers" class="mobile-link">Где купить</a></li>
                                     </ul>
@@ -54,7 +68,7 @@
                     <div class="avatar">
                         <p>Хозяйка пасеки</p>
                         <img src="" alt=""/>
-                        <p>Татьяна Ганова-Поликарпова</p>
+                        <p>Татьяна Назарова</p>
                         <q>Некая цитата</q>
                 </article>
                 <article class="photo-block">
