--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,600i,700" rel="stylesheet">
         <title>Мёд из Шульгин-Лога</title>
     </head>
     <body>
@@ -64,7 +64,8 @@
                 <article class="text-block">
                     <h2>Пчеловодство как искусство</h2>
                     <h4 class="annotation">Наша семья занимается пчеловождением несколько десятков лет. </h4>
-                    <p>Алтай - это наша Родина! Это одно из красивейших мест на Земле. Его красота выражена не только в синеве голубого неба, яркости светящего над головой солнца, величественности гор и просторе степей, но и красоте человеческих душ и пылкости сердец всех тех, кто здесь живет! Мы такие разные, но у нас есть одно общее - </p>
+                    <p>Алтай - это наша Родина! Это одно из красивейших мест на Земле. Его красота выражена не только в синеве голубого неба, яркости светящего над головой солнца, величественности гор и просторе степей, но и красоте человеческих душ и пылкости сердец всех тех, кто здесь живет! Мы такие разные, но у нас есть одно общее -
+                    наш Мёд,который производится в Советском районе Алтайского края, Майминском и Усть-Коксинском районах Республики Алтай в с. Манжерок и Усть-Кокса. </p>
                     <div class="avatar">
                         <p>Хозяйка пасеки</p>
                         <img src="" alt=""/>
@@ -82,25 +83,12 @@
             <section id="assortment">
                 <div class="wrap-block">
                     <div class="wrap-img">
-                        <img class="product-img" src="img/honey2.jpg" alt="">
+                        <img class="product-img" src="img/honey2.jpg"width="448"height="299" alt="">
                     </div>
                     <div class="about-product">
                         <h2 class="title-product">Мёд разнотравье</h2>
                         <h4 class="annotation-product">Традиционно прекрасный</h4>
                         <p class="describe-product">Большой процент гречихи. Невероятно ароматный, благородной густой консистенции мёд. </p>
-                        <div class="slider-doc">
-                            <div class="hexagon1">
-                                <div class="hexTop1"></div>
-                                <div class="hexBottom1"></div>
-                            </div>
-                            <div class="hexagon2">
-                                <div class="hexTop2"></div>
-                                <div class="hexBottom2"></div>
-                            </div><div class="hexagon3">
-                                <div class="hexTop3"></div>
-                                <div class="hexBottom3"></div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="wrap-block">
@@ -110,20 +98,27 @@
                     <div class="about-product">
                         <h2 class="title-product">Медовая композиция с пергой</h2>
                         <h4 class="annotation-product">Традиционно прекрасный</h4>
-                        <p class="describe-product">Большой процент гречихи. Невероятно ароматный, благородной густой консистенции мёд. </p>
-                        <div class="slider-doc">
-                            <div class="hexagon1">
-                                <div class="hexTop1"></div>
-                                <div class="hexBottom1"></div>
-                            </div>
-                            <div class="hexagon2">
-                                <div class="hexTop2"></div>
-                                <div class="hexBottom2"></div>
-                            </div><div class="hexagon3">
-                                <div class="hexTop3"></div>
-                                <div class="hexBottom3"></div>
-                            </div>
-                        </div>
+                        <p class="describe-product">Большой процент гречихи. Невероятно ароматный, благородной густой консистенции мёд.Здесь будет красивое описание продуктаЗдесь будет красивое описание продуктаЗдесь будет красивое описание продуктаЗдесь будет красивое описание продукЗдесь будет красивое описание продуктата </p>
+                    </div>
+                </div>
+                <div class="wrap-block">
+                    <div class="wrap-img">
+                        <img class="product-img" src="img/soap1.jpg"width="448"height="299" alt="">
+                    </div>
+                    <div class="about-product">
+                        <h2 class="title-product">Мыло с натуральным мёдом</h2>
+                        <h4 class="annotation-product">Нежное очищение вашей кожи</h4>
+                        <p class="describe-product">Мыло, приготовленное вручную с добавлением натурального мёда. Здесь тоже некое описание,ёмкое ,но не длинное. </p>
+                    </div>
+                </div>
+                <div class="wrap-block">
+                    <div class="wrap-img">
+                        <img class="product-img" src="img/candle2.jpg"width="448"height="299" alt="">
+                    </div>
+                    <div class="about-product">
+                        <h2 class="title-product">Свеча из пчелиного воска</h2>
+                        <h4 class="annotation-product">ароматная и согревающая</h4>
+                        <p class="describe-product">Здесь некое описание Здесь некое описание Здесь некое описание Здесь некое описание Здесь некое описание Здесь некое описание</p>
                     </div>
                 </div>
             </section>
@@ -158,7 +153,7 @@
                     </div>
                 </div>
                 <div class="map">
-                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+                    <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script> -->
                 </div>
             </section>
         </main>
