--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <li>
                                 <a href="#assortment" class="main-link">Продукция</a>
                                 <ul class="sub-nav">
-                                    <li><a href="#honey" class="sub-link">Мёд</a></li>
+                                    <li><a href="#assortment" class="sub-link">Мёд</a></li>
                                     <li><a href="#honeys-mix" class="sub-link">Медовые композиции</a></li>
                                     <li><a href="#candle-soap" class="sub-link">Свечи и мыло</a></li>
                                 </ul>
@@ -36,7 +36,7 @@
                                         <li>
                                         <a href="#assortment" class="mobile-link">Продукция</a>
                                             <ul class="sub-nav mobile-sub">
-                                                <li><a href="#honey" class="mobile-link">Мёд</a></li>
+                                                <li><a href="#assortment" class="mobile-link">Мёд</a></li>
                                                 <li><a href="#honeys-mix" class="mobile-link">Медовые композиции</a></li>
                                                 <li><a href="#candle-soap" class="mobile-link">Свечи и мыло</a></li>
                                             </ul>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="wrap-block">
-                    <div class="wrap-img">
+                    <div class="wrap-img" id="honeys-mix">
                         <img class="product-img" src="img/honey2.jpg" alt="">
                     </div>
                     <div class="about-product">
@@ -101,7 +101,7 @@
                         <p class="describe-product">Большой процент гречихи. Невероятно ароматный, благородной густой консистенции мёд.Здесь будет красивое описание продуктаЗдесь будет красивое описание продуктаЗдесь будет красивое описание продуктаЗдесь будет красивое описание продукЗдесь будет красивое описание продуктата </p>
                     </div>
                 </div>
-                <div class="wrap-block">
+                <div class="wrap-block" id="candle-soap">
                     <div class="wrap-img">
                         <img class="product-img" src="img/soap1.jpg"width="448"height="299" alt="">
                     </div>
@@ -153,10 +153,24 @@
                     </div>
                 </div>
                 <div class="map">
-                    <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script> -->
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="container">
+                <section class="contacts">
+                    <p>Оставайтесь с нами на связи!</p>
+                    <p class="e-mail">Honeyforhealth@yandex.ru</p>
+                    <p class="phone">8 903 956 79 73</p>
+                </section>
+                <div class="logo"><img src="img/logo-pra.jpg" alt=""width="150"height="150"/></div>
+                <section class="social">
+                    <div class="hexagon-social social-btn-vk"><a href="https://vk.com/altaybees" class="social-btn social-btn-vk">Vk</a></div>
+                    <div class="hexagon-social social-btn-fb"><a href="https://facebook.com/altaybees" class="social-btn social-btn-fb">Fb</a></div>
+                </section>
+            </div>
+        </footer>
         <script src="Honey.js"></script>
     </body>
 </html>
