--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="header-nav">
-                    <img src="img/logo.svg"class="logo"width="150"height="110"alt="Добрый мёд"/>
+                    <img src="#" class="logo"width="120"height="110"alt="Добрый мёд"/>
                     <nav class="main-menu">
                         <ul>
                             <li><a href="#aboutus" class="main-link">О нас</a></li>
@@ -164,7 +164,6 @@
                     <p class="e-mail">Honeyforhealth@yandex.ru</p>
                     <p class="phone">8 903 956 79 73</p>
                 </section>
-                <div class="logo"><img src="img/logo-pra.jpg" alt=""width="150"height="150"/></div>
                 <section class="social">
                     <div class="hexagon-social social-btn-vk"><a href="https://vk.com/altaybees" class="social-btn social-btn-vk">Vk</a></div>
                     <div class="hexagon-social social-btn-fb"><a href="https://facebook.com/altaybees" class="social-btn social-btn-fb">Fb</a></div>
