--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="wrap-block">
                     <div class="wrap-img">
-                        <img class="product-img" src="img/candle2.jpg"width="448"height="299" alt="">
+                        <img class="product-img" src="img/honey2.jpg"width="448"height="299" alt="">
                     </div>
                     <div class="about-product">
                         <h2 class="title-product">Свеча из пчелиного воска</h2>
