--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="container">
                 <div class="header-nav">
-                    <img src="img/logo.png" class="logo"width="120"height="130"alt="Добрый мёд"/>
+                    <img src="#" class="logo"width="120"height="130"alt="Добрый мёд"/>
                     <nav class="main-menu">
                         <ul>
                             <li><a href="#aboutus" class="main-link">О нас</a></li>
