--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
                         <p>Татьяна Назарова</p>
                         <q>Некая цитата</q>
                 </article>
-                <article class="photo-block">
+                <!-- <article class="photo-block">
                     <div class="photo"></div>
                     <div class="photo"></div>
                     <div class="photo"></div>
                     <div class="photo"></div>
 
-                    <!-- <img class="responce"src="img/photo6.jpg" alt=""width="448"height="299">
+                     <img class="responce"src="img/photo6.jpg" alt=""width="448"height="299">
                     <img  class="responce" src="img/photo7.jpg" alt=""width="448"height="299">
                     <img  class="responce"src="img/photo3.jpg" alt=""width="448"height="299">
-                    <img  class="responce"src="img/photo4.jpg" alt=""width="448"height="299"> -->
+                    <img  class="responce"src="img/photo4.jpg" alt=""width="448"height="299">
                     <div class="absolute-element on-photo"></div>
-                </article>
+                </article> -->
             </section>
             <section id="assortment">
                 <div class="wrap-block">
@@ -174,7 +174,7 @@
                         <h4 class="title-city">
                             <i class="fa fa-compass" aria-hidden="true"></i>Горно-Алтайск</h4>
                         <p>Наличие уточняйте по телефону 89673455678</p>
-                        <img class="city-avatar"src="" alt="">
+                        <img src="img/Tanya.jpg" width="168"height="228"alt="Таня"/>
                     </div>
                     <div class="distributer-card">
                         <h4 class="title-city"><i class="fa fa-compass" aria-hidden="true"></i>Санкт-Петербург</h4>
