--- a/index.html
+++ b/index.html
@@ -1,218 +1,49 @@
 <!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,600i,700" rel="stylesheet">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <title>Мёд из Шульгин-Лога</title>
-    </head>
-    <body>
-        <header>
-            <div class="container">
-                <div class="header-nav">
-                    <img src="#" class="logo"width="120"height="130"alt="Добрый мёд"/>
-                    <nav class="main-menu">
-                        <ul>
-                            <li><a href="#aboutus" class="main-link">О нас</a></li>
-                            <li>
-                                <a href="#assortment" class="main-link">Продукция</a>
-                                <ul class="sub-nav">
-                                    <li><a href="#assortment" class="sub-link">Мёд</a></li>
-                                    <li><a href="#honeys-mix" class="sub-link">Медовые композиции</a></li>
-                                    <li><a href="#candle-soap" class="sub-link">Свечи и мыло</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#quality" class="main-link">Качество</a></li>
-                            <li><a href="#distributers" class="main-link">Где купить</a></li>
-                        </ul>
-                    </nav>
-                        <div class="burger-menu">
-                            <div class="burger">
-                                <nav class="mobile-menu">
-                                    <ul>
-                                        <li><a href="#aboutus" class="mobile-link">О нас</a></li>
-                                        <li>
-                                        <a href="#assortment" class="mobile-link">Продукция</a>
-                                            <ul class="sub-nav mobile-sub">
-                                                <li><a href="#assortment" class="mobile-link">Мёд</a></li>
-                                                <li><a href="#honeys-mix" class="mobile-link">Медовые композиции</a></li>
-                                                <li><a href="#candle-soap" class="mobile-link">Свечи и мыло</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#quality" class="mobile-link">Качество</a></li>
-                                        <li><a href="#distributers" class="mobile-link">Где купить</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    <section class="social">
-                        <div class="hexagon-wrapper">
-                            <div class="hexagon">
-                                <a href="https://vk.com/altaybees" class="fa fa-vk"></a>
-                            </div>
-                        </div>
-                        <div class="hexagon-wrapper">
-                            <div class="hexagon">
-                                <a href="https://facebook.com/altaybees" class="fa fa-facebook"></a>
-                            </div>
-                        </div>
-                        <div class="hexagon-wrapper">
-                            <div class="hexagon">
-                                <a href="#" class="fa fa-odnoklassniki"></a>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-                <div class="promo">
-                    <h1>Мёд из Горного Алтая с любовью</h1>
-                    <h3>Алтай - это красота, гармония и щедрость природы, дарами которой с благодарностью может воспользоваться каждый человек.</h3>
-                    <a class="product-btn" href="#assortment">Продукты нашего труда</a>
-                </div>
-            </div>
-        </header>
-        <main>
-            <section id="aboutus">
-                <article class="text-block">
-                    <h2>Пчеловодство как искусство</h2>
-                    <h4 class="annotation">Наша семья занимается пчеловождением несколько десятков лет. </h4>
-                    <p>Алтай - это наша Родина! Это одно из красивейших мест на Земле. Его красота выражена не только в синеве голубого неба, яркости светящего над головой солнца, величественности гор и просторе степей, но и красоте человеческих душ и пылкости сердец всех тех, кто здесь живет! Мы такие разные, но у нас есть одно общее -
-                    наш Мёд,который производится в Советском районе Алтайского края, Майминском и Усть-Коксинском районах Республики Алтай в с. Манжерок и Усть-Кокса. </p>
-                    <div class="avatar">
-                        <p>Хозяйка пасеки</p>
-                        <img src="img/Tanya.jpg" width="168"height="228"alt="Таня"/>
-                        <p>Татьяна Назарова</p>
-                        <q>Некая цитата</q>
-                </article>
-                <!-- <article class="photo-block">
-                    <div class="photo"></div>
-                    <div class="photo"></div>
-                    <div class="photo"></div>
-                    <div class="photo"></div>
-
-                     <img class="responce"src="img/photo6.jpg" alt=""width="448"height="299">
-                    <img  class="responce" src="img/photo7.jpg" alt=""width="448"height="299">
-                    <img  class="responce"src="img/photo3.jpg" alt=""width="448"height="299">
-                    <img  class="responce"src="img/photo4.jpg" alt=""width="448"height="299">
-                    <div class="absolute-element on-photo"></div>
-                </article> -->
-            </section>
-            <section id="assortment">
-                <div class="wrap-block">
-                    <div class="wrap-img">
-                        <img class="product-img" src="img/honey2.jpg"width="448"height="299" alt="">
-                    </div>
-                    <div class="about-product">
-                        <h2 class="title-product">Мёд разнотравье</h2>
-                        <h4 class="annotation-product">Традиционно прекрасный</h4>
-                        <p class="describe-product">Большой процент гречихи. Невероятно ароматный, благородной густой консистенции мёд. </p>
-                    </div>
-                </div>
-                <div class="wrap-block">
-                    <div class="wrap-img" id="honeys-mix">
-                        <img class="product-img" src="img/honey3.jpg" alt="">
-                    </div>
-                    <div class="about-product">
-                        <h2 class="title-product">Медовая композиция с пергой</h2>
-                        <h4 class="annotation-product">Традиционно прекрасный</h4>
-                        <p class="describe-product">Большой процент гречихи. Невероятно ароматный, благородной густой консистенции мёд.Здесь будет красивое описание продуктаЗдесь будет красивое описание продуктаЗдесь будет красивое описание продуктаЗдесь будет красивое описание продукЗдесь будет красивое описание продуктата </p>
-                    </div>
-                </div>
-                <div class="wrap-block" id="candle-soap">
-                    <div class="wrap-img">
-                        <img class="product-img" src="img/soap1.jpg"width="448"height="299" alt="">
-                    </div>
-                    <div class="about-product">
-                        <h2 class="title-product">Мыло с натуральным мёдом</h2>
-                        <h4 class="annotation-product">Нежное очищение вашей кожи</h4>
-                        <p class="describe-product">Мыло, приготовленное вручную с добавлением натурального мёда. Здесь тоже некое описание,ёмкое ,но не длинное. </p>
-                    </div>
-                </div>
-                <div class="wrap-block">
-                    <div class="wrap-img">
-                        <img class="product-img" src="img/candle1.jpg"width="448"height="299" alt="">
-                    </div>
-                    <div class="about-product">
-                        <h2 class="title-product">Свеча из пчелиного воска</h2>
-                        <h4 class="annotation-product">ароматная и согревающая</h4>
-                        <p class="describe-product">Здесь некое описание Здесь некое описание Здесь некое описание Здесь некое описание Здесь некое описание Здесь некое описание</p>
-                    </div>
-                </div>
-            </section>
-            <section id="quality">
-                <div class="wrap-doc-info">
-                    <h2>Сертификация</h2>
-                    <h4 class="annotation">Официальные документы и награды</h4>
-                    <button type="radio"id="btn-1" class="name-document">Аттестат</button>
-                    <p class="about-document">В соответствии аттестатом аккредитации в республиканской ветеринарной лаборатории, показатель диастазного числа равен 43.82 ед. Готе, что  говорит об очень высоком качестве и биологической ценности мёда. </p>
-                    <button type="radio" id="btn-2" class="name-document">Сертификат</button>
-                    <p class="about-document">В соответствии сертификатом аккредитации в республиканской ветеринарной лаборатории, показатель диастазного числа равен 43.82 ед. Готе, что  говорит об очень высоком качестве мёда. </p>
-                    <button type="radio"id="btn-3" class="name-document">Награда</button>
-                    <p class="about-document">За участие в национальном .... </p>
-                </div>
-                <div class="doc-wrap">
-                    <div class="attestate">
-                        <span class="fa fa-times close-btn"></span>
-                        <img src="img/photo7.jpg" width="560"height="420" alt="Аттестат"/>
-                    </div>
-                    <div class="sertificate">
-                        <span class="fa fa-times close-btn2"></span>
-                        <img src="img/photo6.jpg" width="560"height="420" alt="Сертификат"/>
-                    </div>
-                    <div class="reward">
-                        <span class="fa fa-times close-btn3"></span>
-                        <img src="img/photo5.jpg" width="560"height="420" alt="Награда"/>
-                    </div>
-                </div>
-            </section>
-            <section id="distributers">
-                <div class="wrap-list">
-                    <h2 class="where-buy">Наши представители</h2>
-                    <div class="distributer-card">
-                        <h4 class="title-city">
-                            <i class="fa fa-compass" aria-hidden="true"></i>Горно-Алтайск</h4>
-                        <p>Наличие уточняйте по телефону 89673455678</p>
-                        <img src="img/Tanya.jpg" width="168"height="228"alt="Таня"/>
-                    </div>
-                    <div class="distributer-card">
-                        <h4 class="title-city"><i class="fa fa-compass" aria-hidden="true"></i>Санкт-Петербург</h4>
-                        <p>Наличие уточняйте по телефону 89673455678</p>
-                        <img class="city-avatar" src="" alt="">
-                    </div>
-                </div>
-                <div class="map">
-                    <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=bae3aLDJDnz8YIbQ_XwMDeYGi7684T29&amp;width=100%;height=100%;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script> -->
-                </div>
-            </section>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sasha Coil</title>
+</head>
+<body>  
+    <div class="site-wrapper">
+        <header class="header"></header>
+        <main class="main">
+            <ul class="main__works-list">
+                <li class="works-item">
+                    <a style="width:100%"href="Industrial/main.html" class="works-link">
+                        <img src="img/industrial.png" alt="responsive" class="works-screen">
+                    </a>
+                </li>
+                <li class="works-item">
+                    <a href="Honey_page/build/index.html" class="works-link">
+                        <img src="img/honey.png" alt="" class="works-screen">
+                    </a>
+                </li>
+                <li class="works-item">
+                    <a href="Gllacy/index.html" class="works-link">
+                        <img src="img/gllacy.png" alt="" class="works-screen">
+                    </a>
+                </li>
+                <li class="works-item">
+                    <a href="form_example/form.html" class="works-link">
+                        <img src="img/form.png" alt="" class="works-screen">
+                    </a>
+                </li>
+                 <li class="works-item">
+                    <a href="questionaire/index.html" class="works-link">
+                        <img src="img/qustionaire.png" alt="" class="works-screen">
+                    </a>
+                </li>
+                <li class="works-item">
+                    <a href="Kerner_test/kerner.html" class="works-link">
+                        <img src="img/kerner.png" alt="" class="works-screen">
+                    </a>
+                </li>
+            </ul>
         </main>
-        <footer>
-            <div class="container">
-                <section class="contacts">
-                    <p><i class="fa fa-handshake-o"></i>Оставайтесь с нами на связи!</p>
-                    <p class="e-mail"><i class="fa fa-envelope-o" aria-hidden="true"></i>Honeyfromaltay@yandex.ru</p>
-                    <p class="phone"><i class="fa fa-volume-control-phone"></i>8 903 956 79 73</p>
-                </section>
-                <section class="social">
-                    <div class="hexagon-wrapper">
-                        <div class="hexagon">
-                            <a href="https://vk.com/altaybees" class="fa fa-vk"></a>
-                        </div>
-                    </div>
-                    <div class="hexagon-wrapper">
-                        <div class="hexagon">
-                            <a href="https://facebook.com/altaybees" class="fa fa-facebook"></a>
-                        </div>
-                    </div>
-                    <div class="hexagon-wrapper">
-                        <div class="hexagon">
-                            <a href="#" class="fa fa-odnoklassniki"></a>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </footer>
-        <script src="Honey.js"></script>
-    </body>
+        <footer class="footer"></footer>
+    </div>
+</body>
 </html>
